validation-admission-policy/mangakissa-admission-2-friends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mangakissa-admission-friend
  name: mangakissa-admission-2-friend
  namespace: mangakissa-zone
  annotations:
    creditizens-vip-friends: "naruto no sound"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mangakissa-admission-friend
  template:
    metadata:
      labels:
        app: mangakissa-admission-friend
    spec:
      containers:
      - image: nginx
        name: nginx
