validation-admission-policy/mangakissa-admission-3-friends.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mangakissa-admission-friends
  name: mangakissa-admission-3-friends
  namespace: mangakissa-zone
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mangakissa-admission-friends
  template:
    metadata:
      labels:
        app: mangakissa-admission-friends
    spec:
      containers:
      - image: nginx
        name: nginx
